--- a/courseMS/Dockerfile
+++ b/courseMS/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17-jdk-slim
 VOLUME /tmp
-COPY target/course-service.jar course-service.jar
+COPY target/course-service-1.0.jar course-service.jar
 ENTRYPOINT ["java","-jar","/course-service.jar"]
