--- a/courseMS/Dockerfile
+++ b/courseMS/Dockerfile
@@ -1,4 +1,8 @@
-FROM openjdk:17-jdk-slim
-VOLUME /tmp
-COPY target/course-service-1.0.jar course-service.jar
-ENTRYPOINT ["java","-jar","/course-service.jar"]
+# исходный образ(операц.системы)
+FROM openjdk:17-jdk-slim 
+#подключение папки temp
+VOLUME /tmp 
+#копирование jar файла из нашего проекта в образ
+COPY target/course-service-1.0.jar course-service.jar 
+#указание команды запуска приложения внутри контейнера
+ENTRYPOINT ["java","-jar","/course-service.jar"] 
