--- a/courseMS/docker-compose.yml
+++ b/courseMS/docker-compose.yml
@@ -17,6 +17,6 @@ services:
         environment:
             SPRING_APPLICATION_NAME: courseMS
             SPRING_DATASOURCE_DRIVERCLASSNAME: com.mysql.cj.jdbc.Driver
-            SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/web?characterEncoding=utf8&characterSetResults=utf8&connectionCollation=utf8
+            SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/web?characterEncoding=utf8&characterSetResults=utf8&connectionCollation=utf8
             SPRING_DATASOURCE_USERNAME: root
             SPRING_DATASOURCE_PASSWORD: demo
