--- a/courseWS/src/main/resources/application.properties
+++ b/courseWS/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=courseMS
+spring.application.name=courseWS
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql:3306/web?characterEncoding=utf8&characterSetResults=utf8&connectionCollation=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/web?characterEncoding=utf8&characterSetResults=utf8&connectionCollation=utf8
 spring.datasource.username=root
 spring.datasource.password=demo
